# dino-blink

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: release.yml
src/: lib.rs  main.rs
