[package]
name = "dino-blink"
version = "0.1.0"
edition = "2024"
description = "Retro infinite runner. Blink through chaos like a warlock. A WASM Artifact"
license = "MIT"
repository = "https://github.com/ujjwalvivek/dino-blink"
homepage = "https://ujjwalvivek.itch.io/dino-blink"
authors = ["ujjwalvivek"]
keywords = ["game-engine", "wasm", "2d", "retro", "rust", "runner"]
categories = ["wasm", "games"]

[lib]
name = "dino_blink"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "dino-blink-game"
path = "src/main.rs"

[dependencies]
engine = { package = "journey-engine", version = "1.1.2" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"